# send-money-agent

./: .gitignore  README.md  pyproject.toml  seed_data.py  test_results.txt
data/: transaction_history.csv
docs/: ARCHITECTURE.md  TECHNICAL_NOTES.md  TESTING.md  WALKTHROUGH.md
docs/plans/: 2025-12-10-send-money-agent.md
examples/: conversations.md  demo.py
local_data/: transactions.csv
send_money_agent/: __init__.py  agent.py  history.py  limits.py  models.py  tools.py
tests/: __init__.py  test_agent.py  test_history.py  test_integration.py  test_limits.py  test_models.py  test_tools.py
