[project]
name = "send-money-agent"
version = "0.1.0"
description = "WhatsApp-based conversational money transfer agent using Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["send_money_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
